# termisprite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
src/: CMakeLists.txt  color.hpp  colorpicker.cpp  colorpicker.hpp  editor.cpp  editor.hpp  import.cpp  import.hpp  main.cpp  menu.cpp  menu.hpp  modals.cpp  modals.hpp  shortcuts.cpp  shortcuts.hpp  sprite.cpp  sprite.hpp  sprite_io.cpp  sprite_io.hpp  statusbar.cpp  statusbar.hpp  termisprite.cpp  termisprite.hpp  tools.cpp  tools.hpp
